# 06_05_25_gpt_slim

./: .gitignore  AGENTS.md  README.md  app.py  keys.py  llm_utils.py  mein_patch.patch  pyproject.toml  requirements.txt  requirements.txt.rej  session_state.py  trigger_engine.py  vacancy_agent.py  wizard.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml
ace_tools/: __init__.py  file_search.py  image_gen.py  web.py
components/: wizard.py
functions/: extract_benefits.py  extract_skills.py  extract_tasks.py  generate_jobad.py  parse_utils.py  predict_salary.py  translate.py
logic/: file_tools.py  job_tools.py  processors.py  search_helpers.py  trigger_engine.py
models/: local_model.py  model_selector.py  openai_model.py
pages/: 1_🏠_Home.py  1_🧩_Wizard.py  2_🏠_Advantages.py  3_💡_Tech_Overview.py  Wizard.py  wizard.py
services/: __init__.py  external_data.py  graphics.py  logger.py  new_tools.py  scraping_tools.py  vacancy_agent.py  vector_search.py
src/agents/: vacancy_agent.py
src/config/: config.py  keys.py
src/logic/: processors.py  (+1 more)
state/: session_state.py
tests/: __init__.py  test_external_data.py  test_fetch_url_text.py  test_file_tools.py  test_graphics.py  test_job_tools.py  test_lang_utils.py  test_llm_utils.py  test_navigation.py  test_processors.py  test_scraping_tools.py  test_search_helpers.py  test_vacancy_agent.py  test_vector_search.py  test_wizard_utils.py
utils/: __init__.py  config.py  extraction.py  keys.py  lang_utils.py  llm_utils.py  session_keys.py  summarize.py  tool_registry.py  url_fetcher.py
vacalyser/: app.py
(+19 files in other folders)
