[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vacalyser"
version = "0.1.0"
description = "Vacalyser workflow demo"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "images*"]
